--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Master Styles */
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -36,6 +37,7 @@ button:disabled {
   color: #aaa;
   cursor: auto;
 }
+
 /* Navigation link styles */
 nav a {
   padding: 5px 10px;
@@ -55,6 +57,7 @@ nav a:hover {
 nav a.active {
   color: #039be5;
 }
+
 /* items class */
 .items {
   margin: 0 0 2em 0;
@@ -110,6 +113,7 @@ nav a.active {
   background-color: #CFD8DC;
   color: white;
 }
+
 .items li.selected:hover {
   background-color: #BBD8DC;
 }
@@ -131,6 +135,15 @@ nav a.active {
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+/* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+/*
+Copyright 2016 Google Inc. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+*/
